finishing last of gui , showing solution